docs/7.56/bundles/abap-keyword-documentation-abap-programming-language-obsolete-language-elements-obsolete-statements.md
# ABAP - Keyword Documentation / ABAP - Programming Language / Obsolete Language Elements / Obsolete Statements for RAP

Included pages: 11


### abenrap_obsolete.htm

---
title: "Obsolete Statements for RAP"
description: |
  -   Obsolete EML Statements(https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abeneml_obsolete.htm) Obsolete ABP Statements(https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabp_obsolete.htm) Obsolete ABAP EML Statements(https://help.sap.com/doc/abapdocu_756_index_htm/7.5
version: "7.56"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenrap_obsolete.htm"
abapFile: "abenrap_obsolete.htm"
keywords: ["do", "abenrap", "obsolete"]
---

* * *

AS ABAP Release 756, ©Copyright 2021 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_reference.htm) →  [Obsolete Language Elements](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_obsolete.htm) → 

Obsolete Statements for RAP

-   [Obsolete EML Statements](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abeneml_obsolete.htm)

Continue
[Obsolete ABP Statements](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabp_obsolete.htm)
[Obsolete ABAP EML Statements](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abeneml_obsolete.htm)
[Obsolete ABAP EML Language Elements](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenrap_le_obsolete.htm)


### abenabp_obsolete.htm

---
title: "Obsolete ABP Statements"
description: |
  -   METHODS, FOR BEHAVIOR(https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapmethods_for_behavior.htm) -   METHODS, FOR DETERMINATION, VALIDATION(https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapmethods_for_det_val_obs.htm) METHODS, FOR BEHAVIOR(https://help.sap.com/d
version: "7.56"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabp_obsolete.htm"
abapFile: "abenabp_obsolete.htm"
keywords: ["do", "method", "abenabp", "obsolete"]
---

* * *

AS ABAP Release 756, ©Copyright 2021 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_reference.htm) →  [Obsolete Language Elements](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_obsolete.htm) →  [Obsolete Statements for RAP](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenrap_obsolete.htm) → 

Obsolete ABP Statements

-   [METHODS, FOR BEHAVIOR](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapmethods_for_behavior.htm)
-   [METHODS, FOR DETERMINATION, VALIDATION](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapmethods_for_det_val_obs.htm)

Continue
[METHODS, FOR BEHAVIOR](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapmethods_for_behavior.htm)
[METHODS, FOR DETERMINATION, VALIDATION](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapmethods_for_det_val_obs.htm)


### abapmethods_for_behavior.htm

---
title: "METHODS, FOR BEHAVIOR"
description: |
  Syntax  METHODS read   FOR BEHAVIOR ...    METHODS modify FOR BEHAVIOR ...    METHODS lock   FOR BEHAVIOR ...  Effect Obsolete declaration of ABP handler methods(https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabp_handler_method_glosry.htm 'Glossary Entry') i
version: "7.56"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapmethods_for_behavior.htm"
abapFile: "abapmethods_for_behavior.htm"
keywords: ["do", "if", "try", "method", "class", "abapmethods", "for", "behavior"]
---

* * *

AS ABAP Release 756, ©Copyright 2021 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_reference.htm) →  [Obsolete Language Elements](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_obsolete.htm) →  [Obsolete Statements for RAP](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenrap_obsolete.htm) →  [Obsolete ABP Statements](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabp_obsolete.htm) → 

METHODS, FOR BEHAVIOR

Syntax

  *{* METHODS read   FOR BEHAVIOR ... *}*
*|* *{* METHODS modify FOR BEHAVIOR ... *}*
*|* *{* METHODS lock   FOR BEHAVIOR ... *}*

Effect

Obsolete declaration of [ABP handler methods](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabp_handler_method_glosry.htm "Glossary Entry") in the [handler class](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabp_handler_class_glosry.htm "Glossary Entry") of an [ABAP behavior pool](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenbehavior_pool_glosry.htm "Glossary Entry"). When using the addition FOR BEHAVIOR, the methods must have one of the predefined names modify, read, or lock.

Instead the following declarations should be used:

-   [METHODS meth FOR READ   ...](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapmethods_for_rap_behv.htm)
-   [METHODS meth FOR MODIFY ...](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapmethods_for_rap_behv.htm)
-   [METHODS meth FOR LOCK   ...](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapmethods_for_rap_behv.htm)

Here, the name of the method is not prescribed. The meaning of the methods is defined by the addition FOR MODIFY, FOR READ, or FOR LOCK instead.


### abapmethods_for_det_val_obs.htm

---
title: "METHODS, FOR DETERMINATION, VALIDATION"
description: |
  Syntax  METHODS ... FOR DETERMINATION ...    METHODS ... FOR VALIDATION ...  Effect Obsolete declaration of ABP handler methods(https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabp_handler_method_glosry.htm 'Glossary Entry') in the handler class(https://help.sap.com/
version: "7.56"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapmethods_for_det_val_obs.htm"
abapFile: "abapmethods_for_det_val_obs.htm"
keywords: ["do", "try", "method", "class", "abapmethods", "for", "det", "val", "obs"]
---

* * *

AS ABAP Release 756, ©Copyright 2021 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_reference.htm) →  [Obsolete Language Elements](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_obsolete.htm) →  [Obsolete Statements for RAP](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenrap_obsolete.htm) →  [Obsolete ABP Statements](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabp_obsolete.htm) → 

METHODS, FOR DETERMINATION, VALIDATION

Syntax

  *{* METHODS ... FOR DETERMINATION ... *}*
*|* *{* METHODS ... FOR VALIDATION ... *}*

Effect

Obsolete declaration of [ABP handler methods](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabp_handler_method_glosry.htm "Glossary Entry") in the [handler class](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabp_handler_class_glosry.htm "Glossary Entry") of an [ABAP behavior pool](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenbehavior_pool_glosry.htm "Glossary Entry").


### abenabp_obsolete.htm

---
title: "Obsolete ABP Statements"
description: |
  -   METHODS, FOR BEHAVIOR(https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapmethods_for_behavior.htm) -   METHODS, FOR DETERMINATION, VALIDATION(https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapmethods_for_det_val_obs.htm) METHODS, FOR BEHAVIOR(https://help.sap.com/d
version: "7.56"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabp_obsolete.htm"
abapFile: "abenabp_obsolete.htm"
keywords: ["do", "method", "abenabp", "obsolete"]
---

* * *

AS ABAP Release 756, ©Copyright 2021 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_reference.htm) →  [Obsolete Language Elements](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_obsolete.htm) →  [Obsolete Statements for RAP](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenrap_obsolete.htm) → 

Obsolete ABP Statements

-   [METHODS, FOR BEHAVIOR](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapmethods_for_behavior.htm)
-   [METHODS, FOR DETERMINATION, VALIDATION](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapmethods_for_det_val_obs.htm)

Continue
[METHODS, FOR BEHAVIOR](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapmethods_for_behavior.htm)
[METHODS, FOR DETERMINATION, VALIDATION](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapmethods_for_det_val_obs.htm)


### abeneml_obsolete.htm

---
title: "Obsolete ABAP EML Statements"
description: |
  -   GET FEATURES(https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abeneml_get_features.htm) GET FEATURES(https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abeneml_get_features.htm)
version: "7.56"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abeneml_obsolete.htm"
abapFile: "abeneml_obsolete.htm"
keywords: ["do", "abeneml", "obsolete"]
---

* * *

AS ABAP Release 756, ©Copyright 2021 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_reference.htm) →  [Obsolete Language Elements](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_obsolete.htm) →  [Obsolete Statements for RAP](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenrap_obsolete.htm) → 

Obsolete ABAP EML Statements

-   [GET FEATURES](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abeneml_get_features.htm)

Continue
[GET FEATURES](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abeneml_get_features.htm)


### abeneml_get_features.htm

---
title: "GET FEATURES"
description: |
  Obsolete Syntax GET  GLOBAL FEATURES   INSTANCE FEATURES    ENTITY bdef FROM keys REQUEST request RESULT result response    OF bdef ENTITY bdef1 FROM keys REQUEST request RESULT result ENTITY bdef2 FROM keys REQUEST request RESULT result ...
version: "7.56"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abeneml_get_features.htm"
abapFile: "abeneml_get_features.htm"
keywords: ["do", "abeneml", "get", "features"]
---

* * *

AS ABAP Release 756, ©Copyright 2021 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_reference.htm) →  [Obsolete Language Elements](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_obsolete.htm) →  [Obsolete Statements for RAP](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenrap_obsolete.htm) →  [Obsolete ABAP EML Statements](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abeneml_obsolete.htm) → 

GET FEATURES

Obsolete Syntax

GET *{* GLOBAL FEATURES
  *|* *{* *\[*INSTANCE*\]* FEATURES *}* *}*
       *{* ENTITY bdef FROM keys
         REQUEST request RESULT result
              *\[*response*\]* *}*
       *|* *{* OF bdef
             ENTITY bdef1 FROM keys
             REQUEST request RESULT result
            *\[*ENTITY bdef2 FROM keys
             REQUEST request RESULT result*\]*
            *\[*... *\]*
              *\[*response*\]* *}*
        *|* *{* OPERATIONS dynget
              *\[*response*\]* *}*.

Alternatives:

[1\. ... GLOBAL FEATURES ENTITY bdef FROM keys REQUEST request RESULT result](#!ABAP_ALTERNATIVE_1@1@)
[2\. ... GLOBAL FEATURES OF bdef ENTITY bdefi FROM keys REQUEST request RESULT result](#!ABAP_ALTERNATIVE_2@2@)
[3\. ... GLOBAL FEATURES OPERATIONS dynget](#!ABAP_ALTERNATIVE_3@3@)
[4\. ... FEATURES ENTITY bdef FROM keys REQUEST request RESULT result](#!ABAP_ALTERNATIVE_4@4@)
[5\. ... FEATURES OF bdef ENTITY bdefi FROM keys REQUEST request RESULT result](#!ABAP_ALTERNATIVE_5@5@)
[6\. ... FEATURES OPERATIONS dynget](#!ABAP_ALTERNATIVE_6@6@)

Addition:

[... INSTANCE](#!ABAP_ONE_ADD@1@)

Effect

[GET PERMISSIONS](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapget_permissions.htm) should be used instead.

Alternative 1   

... GLOBAL FEATURES ENTITY bdef FROM keys REQUEST request RESULT result

Effect

Alternative 2   

... GLOBAL FEATURES OF bdef ENTITY bdefi FROM keys REQUEST request RESULT result

Effect

Alternative 3   

... GLOBAL FEATURES OPERATIONS dynget

Effect

Alternative 4   

... FEATURES ENTITY bdef FROM keys REQUEST request RESULT result

Effect

Alternative 5   

... FEATURES OF bdef ENTITY bdefi FROM keys REQUEST request RESULT result

Effect

Alternative 6   

... FEATURES OPERATIONS dynget

Effect

Addition   

... INSTANCE

Effect


### abeneml_obsolete.htm

---
title: "Obsolete ABAP EML Statements"
description: |
  -   GET FEATURES(https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abeneml_get_features.htm) GET FEATURES(https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abeneml_get_features.htm)
version: "7.56"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abeneml_obsolete.htm"
abapFile: "abeneml_obsolete.htm"
keywords: ["do", "abeneml", "obsolete"]
---

* * *

AS ABAP Release 756, ©Copyright 2021 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_reference.htm) →  [Obsolete Language Elements](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_obsolete.htm) →  [Obsolete Statements for RAP](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenrap_obsolete.htm) → 

Obsolete ABAP EML Statements

-   [GET FEATURES](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abeneml_get_features.htm)

Continue
[GET FEATURES](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abeneml_get_features.htm)


### abenrap_le_obsolete.htm

---
title: "Obsolete ABAP EML Language Elements"
description: |
  -   Obsolete BDEF-Derived Types(https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapderived_types_obsolete.htm) ABAP EML - Obsolete BDEF Derived Types(https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapderived_types_obsolete.htm)
version: "7.56"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenrap_le_obsolete.htm"
abapFile: "abenrap_le_obsolete.htm"
keywords: ["do", "types", "abenrap", "obsolete"]
---

* * *

AS ABAP Release 756, ©Copyright 2021 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_reference.htm) →  [Obsolete Language Elements](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_obsolete.htm) →  [Obsolete Statements for RAP](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenrap_obsolete.htm) → 

Obsolete ABAP EML Language Elements

-   [Obsolete BDEF-Derived Types](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapderived_types_obsolete.htm)

Continue
[ABAP EML - Obsolete BDEF Derived Types](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapderived_types_obsolete.htm)


### abapderived_types_obsolete.htm

---
title: "ABAP EML - Obsolete BDEF Derived Types"
description: |
  Syntax ... TYPE  TABLE  STRUCTURE  FOR LOCK bdef. Effect Special ABAP type that is used for internal tables and structures in the context of RAP(https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenrap_glosry.htm 'Glossary Entry') to enable the communication between a R
version: "7.56"
category: "types"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapderived_types_obsolete.htm"
abapFile: "abapderived_types_obsolete.htm"
keywords: ["do", "if", "try", "types", "internal-table", "abapderived", "obsolete"]
---

* * *

AS ABAP Release 756, ©Copyright 2021 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_reference.htm) →  [Obsolete Language Elements](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_obsolete.htm) →  [Obsolete Statements for RAP](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenrap_obsolete.htm) →  [Obsolete ABAP EML Language Elements](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenrap_le_obsolete.htm) → 

ABAP EML - Obsolete BDEF Derived Types

Syntax

... *\[*TYPE*\]* *{* TABLE *|* STRUCTURE *}* FOR LOCK bdef.

Effect

Special ABAP type that is used for internal tables and structures in the context of [RAP](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenrap_glosry.htm "Glossary Entry") to enable the communication between a [RAP BO provider](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenrap_bo_provider_glosry.htm "Glossary Entry") and a [RAP BO consumer](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenrap_bo_consumer_glosry.htm "Glossary Entry").

Overview

The following table covers the variants including information on the BDEF prerequisites and its components.

For more information on the components, see [Components of BDEF Derived Types](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapderived_types_comp.htm). For more information on the BDEF specifications, see the subtopics in [ABAP CDS - BDL for Behavior Definitions](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenbdl.htm).

TYPE TABLE FOR ...

Purpose

BDEF Prerequisites

Components

LOCK

Used to specify [RAP BO instances](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenrap_bo_instance_glosry.htm "Glossary Entry") that are to be locked in the context of the ABAP EML statement [SET LOCKS](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapset_locks.htm). It is basically the same as TYPE TABLE KEY OF (or TYPE STRUCTURE FOR KEY OF respectively). In ADT, a variable typed with TYPE TABLE FOR LOCK shows TYPE TABLE FOR KEY OF (or TYPE STRUCTURE FOR LOCK shows TYPE STRUCTURE FOR KEY OF respectively) in the element information (F2).

See the details in the CDS BDL documentation for [locking](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenbdl_locking.htm).

The keys (not %key).
Note: %is\_draft and %pid are not possible.

Further Information

-   [TYPE TABLE FOR](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abaptype_table_for.htm)
-   [TYPE STRUCTURE FOR](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abaptype_structure_for.htm)


### abenrap_le_obsolete.htm

---
title: "Obsolete ABAP EML Language Elements"
description: |
  -   Obsolete BDEF-Derived Types(https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapderived_types_obsolete.htm) ABAP EML - Obsolete BDEF Derived Types(https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapderived_types_obsolete.htm)
version: "7.56"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenrap_le_obsolete.htm"
abapFile: "abenrap_le_obsolete.htm"
keywords: ["do", "types", "abenrap", "obsolete"]
---

* * *

AS ABAP Release 756, ©Copyright 2021 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_reference.htm) →  [Obsolete Language Elements](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_obsolete.htm) →  [Obsolete Statements for RAP](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenrap_obsolete.htm) → 

Obsolete ABAP EML Language Elements

-   [Obsolete BDEF-Derived Types](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapderived_types_obsolete.htm)

Continue
[ABAP EML - Obsolete BDEF Derived Types](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapderived_types_obsolete.htm)
